# pykonal

./: .gitignore  MANIFEST.in  README.md  eikonal-sph.py  eikonal.py  eikonaleq.py  pykonal.cpp  pykonal.py  pykonal.pyx  pykonal_2d.pyx  pykonal_3d.pyx  pykonal_low_order.pyx  pyproject.toml  setup.py  test.py
.ipynb_checkpoints/: README-checkpoint.md
cython/: .gitignore  heap.c  heap.html  pykonal.c  pykonal.html  pykonal.pyx  pykonal_inline.c  pykonal_raw.c  pykonal_raw.pyx  pykonal_working.cy  setup.py
deprecated/: heap.pyx  test.py
doc/latex/: main.tex  method.tex  preamble.tex  references.bib
jupyter/: 4Eva.ipynb  Locator.ipynb  Locator2.ipynb  compare_coordinate_systems.ipynb  debug.ipynb  demo.ipynb  dev.ipynb  figure_3.ipynb  figure_4.ipynb  figure_5.ipynb  figure_6.ipynb  figure_7.ipynb  figure_8.ipynb  locate.ipynb  marmousi.ipynb  marmousi_2d.ipynb  mcmcloc.ipynb  pykonal_dev.ipynb
pykonal/: __init__.py  __version__.py  constants.pxd  constants.pyx  core.pyx  field.pxd  field.pyx  fields.pxd  fields.pyx  heapq.pxd  heapq.pyx  inventory.py  locate.pxd  locate.pyx  pykonal.pyx  solver.pxd  solver.pyx  stats.pxd  stats.pyx  transform.py  transformations.py
pykonal/data/: AK135F_AVG.csv  IASP91.csv  ak135.npz
pykonal/data/marmousi2/: LICENSE  (+1 more)
pykonal/tests/: test_EikonalSolver.py  test_LinearInterpolator3D.py
scripts/: eq_loc.py
scripts/eq_loc/: eq_loc.cfg  eq_loc.py
scripts/mcmc/: 315_loc.cfg  315_locate_serial_mcmc.py
tests/: test_GridND.py  test_LinearInterpolator3D.py
tutorials/tomography/: cartesian_tomography_2D.ipynb  vmodel.txt
(+4 files in other folders)
